 - input: simplified class hierarchy by merging handler+handler_impl into manager_impl
 - input: vastly improved performance of SFML input implementation
 - input: get_key_name() is now platform-independent, and only returns English
 - input: removed OIS input implementation
 - input: removed GLFW input implementation
 - input: added set_mouse_cursor() and reset_mouse_cursor()
 - gui: added a pure SFML implementation for the gui::manager
 - gui: added a pure SDL implementation for the gui::manager
 - gui: added a "modern" OpenGL 3 implementation, alternative to fixed pipeline legacy OpenGL
 - gui: added documentation for the Lua API
 - gui: added error message when trying to anchor to an object managed by another renderer
 - gui: added error message when trying to anchor to a "$parent..." when there is no parent
 - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
 - gui: added renderer::set_view() to allow arbitrary view transforms
 - gui: added color::from_hsv and color::to_hsv
 - gui: renamed gui::manager_impl into gui::renderer_impl
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::on_script
 - gui: renamed uiobject::fire_udpate_borders to uiobject::notify_borders_need_update
 - gui: renamed color::chanel to color::channel
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: sprite is now a value type
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a renderer
 - gui: "frame_level" has been renamed to just "level"